src/pages/Home/styles/Home.module.css
.home {
  display: flex;
  flex-direction: row;
  height: 100%;
  color: black;
  align-items: center;
  width: 80%;
}

.homePaintingContainer {
  flex: 5;
  justify-content: center;
  min-width: 300px;
}

.homePainting {
  position: relative;
  display: flex;
  width: 100%;
  height: auto;
}

.homePainting img {
  max-width: 100%;
  height: auto;
}

.paintingOverlay {
  display: flex;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  flex-direction: column;
  padding: 10px;
  text-align: center;
  justify-content: center;
  align-items: center;
  opacity: 0;
  visibility: hidden;
  transition:
    opacity 0.3s ease,
    visibility 0.3s ease;
}

.paintingOverlay h2 {
  font-size: clamp(16px, 4vw, 24px);
  margin: 0;
}

.paintingOverlay p {
  font-size: clamp(12px, 3vw, 20px);
  margin: 10px 0 0 0;
}

.homePainting:hover .paintingOverlay {
  opacity: 1;
  visibility: visible;
}

.homeText {
  flex: 1;
  display: flex;
  flex-direction: column;
  margin-bottom: 0;
  justify-content: center;
  padding-left: 50px;
  line-height: 1.6;
  align-items: center;
}

.homeText h1 {
  margin-bottom: 0;
}

.homeText li {
  list-style-type: circle;
}

.homeText p {
  text-align: justify;
  hyphens: auto;
  margin-bottom: 0;
}

.welcome {
  white-space: nowrap;
}

@keyframes wave {
  0% {
    transform: rotate(0deg);
  }
  10% {
    transform: rotate(7.5deg);
  }
  20% {
    transform: rotate(15deg);
  }
  30% {
    transform: rotate(7.5deg);
  }
  40% {
    transform: rotate(0deg);
  }
  50% {
    transform: rotate(-7.5deg);
  }
  60% {
    transform: rotate(-15deg);
  }
  70% {
    transform: rotate(-22.5deg);
  }
  80% {
    transform: rotate(-15deg);
  }
  90% {
    transform: rotate(-7.5deg);
  }
  100% {
    transform: rotate(0deg);
  }
}

.wavingHand {
  display: inline-block;
  transform-origin: bottom center;
  animation: wave 1s ease-in-out infinite;
}

@media (max-width: 900px) {
  .home {
    flex-direction: column;
    width: 100%;
  }

  .homePaintingContainer {
    padding: 20px;
  }

  .homeText {
    padding-left: 20px;
    padding-right: 20px;
  }
}

